--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -8,15 +8,16 @@ interface Props {
 const { title, source, description } = Astro.props;
 ---
 
-<div class="flex flex-col mb-12 md:w-[47.5%] mw-[47.5%] bg-black/20 rounded-xl">
-    <div class=" mb-2 md:mb-0 overflow-hidden rounded-t-xl">
-        <img loading="lazy" class="hover:animate-zoomIn" src={source} alt={title}>
+<div class="flex flex-col lg:flex-row mb-8 w-100 bg-black/20 rounded-lg">
+    <div class="w-full lg:w-[40%] overflow-hidden rounded-lg">
+        <img class="w-full aspect-video object-contain hover:animate-zoomIn " loading="lazy" src={source} alt={title}>
     </div>
-    
-    <div class="flex flex-col px-6 py-4">
-        <h2 class="opacity-85 text-2xl font-semibold mb-3">{title}</h2>
-        <slot name="skills"/>	
-        <p class="text-base mb-4 text-gray-400 dark:text-gray-400">{description}</p>
-        <slot name="buttons"/>	
+    <div class="flex flex-col justify-between w-full lg:w-[60%] px-6 py-4">
+        <div class="flex flex-col">
+            <h2 class="opacity-85 text-2xl font-semibold mb-3">{title}</h2>
+            <slot name="skills"/>	
+            <p class="text-base mb-4 text-gray-400 dark:text-gray-400">{description}</p>
+        </div>
+        <slot name="buttons"/>	    
     </div>
 </div>
