contact section added

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,6 +4,7 @@
             <a class="opacity-70 duration-200 transform hover:sm:text-secondary hover:sm:scale-105 hover:sm:opacity-100 hover:sm:font-semibold" href="#experience">Experience</a>
             <a class="opacity-70 duration-200 transform hover:sm:text-secondary hover:sm:scale-105 hover:sm:opacity-100 hover:sm:font-semibold" href="#projects">Projects</a>
             <a class="opacity-70 duration-200 transform hover:sm:text-secondary hover:sm:scale-105 hover:sm:opacity-100 hover:sm:font-semibold" href="#aboutme">About Me</a>
+            <a class="opacity-70 duration-200 transform hover:sm:text-secondary hover:sm:scale-105 hover:sm:opacity-100 hover:sm:font-semibold" href="#contact">Contact</a>
         </nav>
     </div>
 </header>
