--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,7 +54,7 @@ import '@fontsource-variable/onest';
 	}
 
 	::selection {
-		background: #6834C6;
+		background: #6834c6;
 		color: #ffffff;
 	}
 </style>
