--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,15 +6,17 @@ import Experience from '../components/Experience.astro';
 import Projects from '../components/Projects.astro';
 import Footer from '../components/Footer.astro';
 import AboutMe from '../components/AboutMe.astro';
+import Contact from '../components/Contact.astro';
 ---
 
 <Layout>
 	<Header />
-	<main class="mx-auto flex flex-col max-w-6xl px-6 h-full">
+	<main class="mx-auto flex flex-col max-w-6xl px-6 h-full overflow-hidden">
 		<Hero />
 		<Experience />
 		<Projects />
 		<AboutMe />
+		<Contact />
 		<Footer />
 	</main>
 </Layout>
