--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -11,7 +11,7 @@
         <h2 class="opacity-70 text-xl uppercase font-bold tracking-[.5rem] mb-6">LinkedIn</h2>
         <h3 class="hover:text-primary font-semibold text-2xl md:text-3xl md:mb-72"><a class="mb-6" target="_blank" href="https://www.linkedin.com/in/gerard-doncel-gutierrez/">LinkedIn profile page</a></h3>
     </div>
-    <canvas class="opacity-50 md:absolute -bottom-10 -right-0 -z-20"
+    <canvas class="opacity-70 md:absolute -bottom-10 -right-0"
         id="cobe"
         style="width: 500px; height: 500px"
         width="1000"
@@ -38,8 +38,8 @@
         mapSamples: 16000,
         mapBrightness: 1,
         baseColor: [1, 1, 1],
-        markerColor: [1, 0.1, 1],
-        glowColor: [1, 0.1, 1],
+        markerColor: [1, 0.4, 1],
+        glowColor: [14/255, 11/255, 37/255],
         offset: [0, 0],
         markers: [
             { location: [40.7128, 0.000], size: 0.15 },
