--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -9,9 +9,9 @@
         <h3 class="hover:text-primary font-semibold text-2xl md:text-3xl mb-6"><a class="mb-6" href="tel:+34636739799">+34 636 73 97 99</a></h3>
         <hr class="opacity-70 mb-6 border-t-violet-500/50 border-r-[1px]">
         <h2 class="opacity-70 text-xl uppercase font-bold tracking-[.5rem] mb-6">LinkedIn</h2>
-        <h3 class="hover:text-primary font-semibold text-2xl md:text-3xl md:mb-72"><a class="mb-6" target="_blank" href="https://www.linkedin.com/in/gerard-doncel-gutierrez/">LinkedIn profile page</a></h3>
+        <h3 class="hover:text-primary font-semibold text-2xl md:text-3xl mb-12 sm:mb-72"><a class="mb-6" target="_blank" href="https://www.linkedin.com/in/gerard-doncel-gutierrez/">LinkedIn profile page</a></h3>
     </div>
-    <canvas class="opacity-70 md:absolute -bottom-10 -right-0"
+    <canvas class="opacity-40 sm:absolute -bottom-10 -right-0 -z-10"
         id="cobe"
         style="width: 500px; height: 500px"
         width="1000"
@@ -34,7 +34,7 @@
         theta: 0.5,
         dark: 1,
         diffuse: 0,
-        scale: 1,
+        scale: 1.25,
         mapSamples: 16000,
         mapBrightness: 1,
         baseColor: [1, 1, 1],
