structure fix, footer changed

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,7 +1,7 @@
 ---
 // Components
 import ExperienceCard from '../components/ExperienceCard.astro';
-import SkillPill from '../components/SkillPill.astro';
+import SkillPill from './UI/SkillPill.astro';
 
 // Icons
 import PhpIcon from '../icons/PHPIcon.astro';
