--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,8 +2,8 @@
 import LinkedInIcon from "../icons/LinkedInIcon.astro"
 import GitHubIcon from "../icons/GitHubIcon.astro"
 import ResumeIcon from "../icons/ResumeIcon.astro"
-import Button from "./Button.astro"
-import Carousel from "./Carousel.astro"
+import Button from "./UI/Button.astro"
+import Carousel from "./UI/Carousel.astro"
 ---
 
 <section id="hero" class="md:pt-12 pt-4">
