--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,7 +1,7 @@
 ---
 // Components
-import ProjectCard from '../components/ProjectCard.astro';
-import SkillPill from '../components/SkillPill.astro';
+import ProjectCard from './ProjectCard.astro';
+import SkillPill from './UI/SkillPill.astro';
 
 // Icons
 import JavaScriptIcon from '../icons/JavaScriptIcon.astro';
@@ -16,7 +16,7 @@ import AllToolsDevImage from '../assets/img/all-tools-dev.webp'
 // Icons
 import ViteIcon from '../icons/ViteIcon.astro';
 import ReactIcon from '../icons/ReactIcon.astro';
-import Button from '../components/Button.astro';
+import Button from './UI/Button.astro';
 import PreviewIcon from '../icons/PreviewIcon.astro';
 import SourceIcon from '../icons/SourceIcon.astro';
 import BashIcon from '../icons/BashIcon.astro';
