--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,10 @@
 <header class="sticky top-0 bg-black/0 backdrop-blur-2xl z-20">
     <div class="flex justify-center items-center py-5 mx-auto max-w-5xl px-6">
         <nav class="flex justify-center items-center gap-x-7">
-            <a class="opacity-70 duration-200 transform hover:sm:text-secondary hover:sm:scale-105 hover:sm:opacity-100 hover:sm:font-semibold" href="#experience">Experience</a>
-            <a class="opacity-70 duration-200 transform hover:sm:text-secondary hover:sm:scale-105 hover:sm:opacity-100 hover:sm:font-semibold" href="#projects">Projects</a>
-            <a class="opacity-70 duration-200 transform hover:sm:text-secondary hover:sm:scale-105 hover:sm:opacity-100 hover:sm:font-semibold" href="#aboutme">About</a>
-            <a class="opacity-70 duration-200 transform hover:sm:text-secondary hover:sm:scale-105 hover:sm:opacity-100 hover:sm:font-semibold" href="#contact">Contact</a>
+            <a class="opacity-70 duration-200 transform hover:sm:text-secondary hover:sm:opacity-100 hover:sm:font-semibold" href="#experience">Experience</a>
+            <a class="opacity-70 duration-200 transform hover:sm:text-secondary hover:sm:opacity-100 hover:sm:font-semibold" href="#projects">Projects</a>
+            <a class="opacity-70 duration-200 transform hover:sm:text-secondary hover:sm:opacity-100 hover:sm:font-semibold" href="#aboutme">About</a>
+            <a class="opacity-70 duration-200 transform hover:sm:text-secondary hover:sm:opacity-100 hover:sm:font-semibold" href="#contact">Contact</a>
         </nav>
     </div>
 </header>
