full width carousel

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,4 +1,4 @@
-<section id="aboutme" class="mb-10 section">
+<section id="aboutme" class="mb-10 section max-w-6xl mx-auto w-full">
     <h2 class="text-gray-200 font-medium text-2xl text-left md:text-center mb-8 tracking-[.5rem]">ABOUT ME</h2>
 
     <div class="flex flex-wrap">
