--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@ import Button from "./UI/Button.astro"
 import Carousel from "./UI/Carousel.astro"
 ---
 
-<section id="hero" class="md:pt-12 pt-4">
+<section id="hero" class="md:pt-12 pt-4 max-w-6xl mx-auto w-full">
     <div class="relative flex flex-col mb-8 lg:mb-52">
         <div class="animate-slidein lg:absolute flex justify-center lg:pl-10 lg:pb-4 lg:py-0 right-3 top-0">
             <img class=" z-10 w-80 md:w-[485px] hero-image " src="hero.webp" alt="Gerard Doncel">      
@@ -33,7 +33,6 @@ import Carousel from "./UI/Carousel.astro"
             </div>
         </div>  
     </div>
-    <Carousel />
 </section>
 
 <style>
