--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -16,7 +16,7 @@ import GitIcon from '../icons/GitIcon.astro';
 ---
 
 
-<section id="experience" class="mb-20">
+<section id="experience" class="mb-20 max-w-6xl mx-auto w-full">
     <h2 class="text-gray-200 font-medium text-2xl text-left md:text-center mb-8 tracking-[.5rem]">EXPERIENCE</h2>    
     <div class="relative h-full">
         <div class="absolute ml-2 md:ml-0 left-0 top-4 md:left-1/2 w-[2px] bg-secondary transform -translate-x-1/2 h-full"></div>
