--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -24,7 +24,7 @@ import LinuxIcon from '../icons/LinuxIcon.astro';
 import TailwindIcon from '../icons/TailwindIcon.astro';
 ---
 
-<section id="projects" class="mb-10 section">
+<section id="projects" class="mb-10 section max-w-6xl mx-auto w-full">
     <h2 class="text-gray-200 font-medium text-2xl text-left md:text-center mb-8 tracking-[.5rem]">PROJECTS</h2>
     <div class="flex flex-col justify-between">
         <ProjectCard title='PokéDex App' source={PokedexImage.src} description="Simple Pokedex application built using React. It utilizes the PokeAPI to fetch and display Pokémon information.">
