--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,12 +6,14 @@ import Experience from '../components/Experience.astro';
 import Projects from '../components/Projects.astro';
 import Footer from '../components/Footer.astro';
 import AboutMe from '../components/AboutMe.astro';
+import Carousel from "../components/UI/Carousel.astro"
 ---
 
 <Layout>
 	<Header />
-	<main class="mx-auto flex flex-col max-w-6xl px-6 h-full">
+	<main class="flex flex-col px-6 h-full">
 		<Hero />
+		<Carousel />
 		<Experience />
 		<Projects />
 		<AboutMe />
