scroll speed fix

--- a/src/components/UI/Carousel.astro
+++ b/src/components/UI/Carousel.astro
@@ -40,13 +40,28 @@ import VisualStudio from '../../icons/VisualStudio.astro';
             <VisualStudio class="w-20 h-20"/>
         </li>
         <li>
-            <VisualStudio class="w-20 h-20"/>
+            <PhpIconCarousel class="w-20 h-20"/>
         </li>
         <li>
-            <VisualStudio class="w-20 h-20"/>
+            <HtmlIcon class="w-20 h-20"/>
         </li>
         <li>
-            <VisualStudio class="w-20 h-20"/>
+            <CssIcon class="w-20 h-20"/>
+        </li>
+        <li>
+            <JavaScriptIcon class="w-20 h-20"/>
+        </li>
+        <li>
+            <SqlIcon class="w-20 h-20"/>
+        </li>
+        <li>
+            <GitIcon class="w-20 h-20"/>
+        </li>
+        <li>
+            <ReactIcon class="w-20 h-20"/>
+        </li>
+        <li>
+            <TailwindIcon class="w-20 h-20"/>
         </li>
         <li>
             <VisualStudio class="w-20 h-20"/>
@@ -81,13 +96,28 @@ import VisualStudio from '../../icons/VisualStudio.astro';
             <VisualStudio class="w-20 h-20"/>
         </li>
         <li>
-            <VisualStudio class="w-20 h-20"/>
+            <PhpIconCarousel class="w-20 h-20"/>
         </li>
         <li>
-            <VisualStudio class="w-20 h-20"/>
+            <HtmlIcon class="w-20 h-20"/>
         </li>
         <li>
-            <VisualStudio class="w-20 h-20"/>
+            <CssIcon class="w-20 h-20"/>
+        </li>
+        <li>
+            <JavaScriptIcon class="w-20 h-20"/>
+        </li>
+        <li>
+            <SqlIcon class="w-20 h-20"/>
+        </li>
+        <li>
+            <GitIcon class="w-20 h-20"/>
+        </li>
+        <li>
+            <ReactIcon class="w-20 h-20"/>
+        </li>
+        <li>
+            <TailwindIcon class="w-20 h-20"/>
         </li>
         <li>
             <VisualStudio class="w-20 h-20"/>
