--- a/src/components/UI/Carousel.astro
+++ b/src/components/UI/Carousel.astro
@@ -8,12 +8,16 @@ import GitIcon from '../../icons/GitIcon.astro';
 import ReactIcon from '../../icons/ReactIcon.astro';
 import TailwindIcon from '../../icons/TailwindIcon.astro';
 import VisualStudio from '../../icons/VisualStudio.astro';
+import LaravelIcon from '../../icons/LaravelIcon.astro';
 ---
 
 <div class="w-full inline-flex flex-nowrap overflow-hidden mb-12 [mask-image:_linear-gradient(to_right,transparent_0,_black_128px,_black_calc(100%-200px),transparent_100%)]">
     <ul class="flex items-center justify-center md:justify-start [&_li]:mx-5 sm:[&_li]:mx-8 animate-infinite-scroll">
         <li>
             <PhpIconCarousel class="w-20 h-20"/>
+        </li>
+        <li>
+            <LaravelIcon class="w-20 h-20"/>
         </li>
         <li>
             <HtmlIcon class="w-20 h-20"/>
@@ -41,6 +45,9 @@ import VisualStudio from '../../icons/VisualStudio.astro';
         </li>
         <li>
             <PhpIconCarousel class="w-20 h-20"/>
+        </li>
+        <li>
+            <LaravelIcon class="w-20 h-20"/>
         </li>
         <li>
             <HtmlIcon class="w-20 h-20"/>
@@ -72,6 +79,9 @@ import VisualStudio from '../../icons/VisualStudio.astro';
             <PhpIconCarousel class="w-20 h-20"/>
         </li>
         <li>
+            <LaravelIcon class="w-20 h-20"/>
+        </li>
+        <li>
             <HtmlIcon class="w-20 h-20"/>
         </li>
         <li>
@@ -97,6 +107,9 @@ import VisualStudio from '../../icons/VisualStudio.astro';
         </li>
         <li>
             <PhpIconCarousel class="w-20 h-20"/>
+        </li>
+        <li>
+            <LaravelIcon class="w-20 h-20"/>
         </li>
         <li>
             <HtmlIcon class="w-20 h-20"/>
