changed experience title

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -80,7 +80,7 @@ import LaravelIcon from '../icons/LaravelIcon.astro';
         </ExperienceCard>
         <ExperienceCard 
             date="Apr 2022 - Sep 2022"
-            position="Web Developer"
+            position="Full Stack Developer"
             company="Namastech"
             description="Fixing general bugs of their web application. (4DMOVIN) Development of small tools to imporve web utility. Building WordPress sites, including landing pages, working with woo-commerce."
             side="left">
