--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -57,7 +57,7 @@ import LaravelIcon from '../icons/LaravelIcon.astro';
             company="3&Punt"
             description="Developing quality Moodle plugins and integrations. Utilizing technologies to enhance the Moodle e-learning experience. Collaborating with clients, I analyze requirements to craft optimal solutions and ensure smooth integration."
             side="right"> 
-            <div class="flex flex-wrap justify-start md:justify-start">
+            <div class="flex flex-wrap justify-start">
                 <SkillPill color='bg-indigo-500/30' skill="PHP">
                     <PhpIcon class="w-4 h-4"/>
                 </SkillPill>
@@ -84,7 +84,7 @@ import LaravelIcon from '../icons/LaravelIcon.astro';
             company="Namastech"
             description="Fixing general bugs of their web application. (4DMOVIN) Development of small tools to imporve web utility. Building WordPress sites, including landing pages, working with woo-commerce."
             side="left">
-            <div class="flex flex-wrap justify-end">
+            <div class="flex flex-wrap justify-start md:justify-end">
                 <SkillPill color='bg-indigo-500/30' skill="PHP">
                     <PhpIcon class="w-4 h-4" />
                 </SkillPill>
