--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -25,7 +25,7 @@ import LaravelIcon from '../icons/LaravelIcon.astro';
             date="Oct 2024 - Present"
             position="Backend Developer"
             company="eAgora"
-            description="Enter description here..."
+            description="Working with a development team to enhance the main platform, including integrating and refining APIs and endpoints, while also managing a dashboard that allows for a variety of actions."
             side="left"> 
             <div class="flex flex-wrap justify-start md:justify-end">
                 <SkillPill color='bg-red-500/30' skill="Laravel">
