--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -8,11 +8,11 @@ interface Props {
 const { title, source, description } = Astro.props;
 ---
 
-<div class="flex flex-col lg:flex-row mb-8 w-100 bg-black/20 rounded-lg">
-    <div class="w-full lg:w-[40%] overflow-hidden rounded-lg">
-        <img class="w-full aspect-video object-contain hover:animate-zoomIn " loading="lazy" src={source} alt={title}>
+<div class="flex flex-col mb-8 w-100 bg-black/20 rounded-lg">
+    <div class="project-image w-full overflow-hidden rounded-t-lg">
+        <img class=" w-full aspect-video object-contain hover:animate-zoomIn " loading="lazy" src={source} alt={title}>
     </div>
-    <div class="flex flex-col justify-between w-full lg:w-[60%] px-6 py-4">
+    <div class="flex flex-col justify-between w-full p-6">
         <div class="flex flex-col">
             <h2 class="opacity-85 text-2xl font-semibold mb-3">{title}</h2>
             <slot name="skills"/>	
@@ -21,3 +21,9 @@ const { title, source, description } = Astro.props;
         <slot name="buttons"/>	    
     </div>
 </div>
+
+<style>
+    .project-image {
+        mask-image: linear-gradient(to bottom, black 60%, transparent);
+    }
+</style>
