--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import Contact from "./Contact.astro"
+import Contact from "@components/Contact.astro"
 ---
 
 <div class="mx-auto flex flex-col max-w-6xl px-6 h-full overflow-hidden">
