--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,9 +1,8 @@
 ---
-import LinkedInIcon from "../icons/LinkedInIcon.astro"
-import GitHubIcon from "../icons/GitHubIcon.astro"
-import ResumeIcon from "../icons/ResumeIcon.astro"
-import Button from "./UI/Button.astro"
-import Carousel from "./UI/Carousel.astro"
+import LinkedInIcon from "@icons/LinkedInIcon.astro"
+import GitHubIcon from "@icons/GitHubIcon.astro"
+import ResumeIcon from "@icons/ResumeIcon.astro"
+import Button from "@UI/Button.astro"
 ---
 
 <section id="hero" class="md:pt-12 pt-4 max-w-6xl mx-auto w-full">
