--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,19 +1,19 @@
 ---
 // Components
-import ExperienceCard from '../components/ExperienceCard.astro';
-import SkillPill from './UI/SkillPill.astro';
+import ExperienceCard from '@components/ExperienceCard.astro';
+import SkillPill from '@UI/SkillPill.astro';
 
 // Icons
-import PhpIcon from '../icons/PHPIcon.astro';
-import AngularIcon from '../icons/AngularIcon.astro';
-import TypeScriptIcon from '../icons/TypeScriptIcon.astro';
-import JavaScriptIcon from '../icons/JavaScriptIcon.astro';
-import HtmlIcon from '../icons/HTMLIcon.astro';
-import CssIcon from '../icons/CSSIcon.astro';
-import WordPressIcon from '../icons/WordPressIcon.astro';
-import SqlIcon from '../icons/SQLIcon.astro';
-import GitIcon from '../icons/GitIcon.astro';
-import LaravelIcon from '../icons/LaravelIcon.astro';
+import PhpIcon from '@icons/PHPIcon.astro';
+import AngularIcon from '@icons/AngularIcon.astro';
+import TypeScriptIcon from '@icons/TypeScriptIcon.astro';
+import JavaScriptIcon from '@icons/JavaScriptIcon.astro';
+import HtmlIcon from '@icons/HTMLIcon.astro';
+import CssIcon from '@icons/CSSIcon.astro';
+import WordPressIcon from '@icons/WordPressIcon.astro';
+import SqlIcon from '@icons/SQLIcon.astro';
+import GitIcon from '@icons/GitIcon.astro';
+import LaravelIcon from '@icons/LaravelIcon.astro';
 ---
 
 
