--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,27 +1,23 @@
 ---
 // Components
-import ProjectCard from './ProjectCard.astro';
-import SkillPill from './UI/SkillPill.astro';
+import ProjectCard from '@components/ProjectCard.astro';
+import SkillPill from '@UI/SkillPill.astro';
+import Button from '@UI/Button.astro';
 
 // Icons
-import JavaScriptIcon from '../icons/JavaScriptIcon.astro';
-import NextIcon from '../icons/NextIcon.astro';
-
+import JavaScriptIcon from '@icons/JavaScriptIcon.astro';
 
 // Images
-import PokedexImage from '../assets/img/pokedex-project.webp'
-import ScriptsImage from '../assets/img/unix-system-scripts.webp'
-import AllToolsDevImage from '../assets/img/all-tools-dev.webp'
+import PokedexImage from '@img/pokedex-project.webp'
+import ScriptsImage from '@img/unix-system-scripts.webp'
 
 // Icons
-import ViteIcon from '../icons/ViteIcon.astro';
-import ReactIcon from '../icons/ReactIcon.astro';
-import Button from './UI/Button.astro';
-import PreviewIcon from '../icons/PreviewIcon.astro';
-import SourceIcon from '../icons/SourceIcon.astro';
-import BashIcon from '../icons/BashIcon.astro';
-import LinuxIcon from '../icons/LinuxIcon.astro';
-import TailwindIcon from '../icons/TailwindIcon.astro';
+import ViteIcon from '@icons/ViteIcon.astro';
+import ReactIcon from '@icons/ReactIcon.astro';
+import PreviewIcon from '@icons/PreviewIcon.astro';
+import SourceIcon from '@icons/SourceIcon.astro';
+import BashIcon from '@icons/BashIcon.astro';
+import LinuxIcon from '@icons/LinuxIcon.astro';
 ---
 
 <section id="projects" class="mb-10 section max-w-6xl mx-auto w-full">
