--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Header from '../components/Header.astro';
-import Hero from '../components/Hero.astro'
-import Experience from '../components/Experience.astro';
-import Projects from '../components/Projects.astro';
-import Footer from '../components/Footer.astro';
-import AboutMe from '../components/AboutMe.astro';
-import Carousel from "../components/UI/Carousel.astro"
+import Layout from '@layouts/Layout.astro';
+import Header from '@components/Header.astro';
+import Hero from '@components/Hero.astro'
+import Experience from '@components/Experience.astro';
+import Projects from '@components/Projects.astro';
+import Footer from '@components/Footer.astro';
+import AboutMe from '@components/AboutMe.astro';
+import Carousel from "@components/UI/Carousel.astro"
 ---
 
 <Layout>
