--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -1,3 +1,7 @@
+---
+import AvatarImage from "@img/avatar.webp"
+---
+
 <section id="aboutme" class="mb-10 section max-w-6xl mx-auto w-full">
     <h2 class="text-gray-200 font-medium text-2xl text-left md:text-center mb-8 tracking-[.5rem]">ABOUT ME</h2>
 
@@ -19,7 +23,7 @@
             </p>    
         </div>
         <div class="opacity-85 w-full md:w-1/3 py-4 flex justify-center items-center">
-            <img loading="lazy" class="w-72 rounded-full" src="avatar.webp" alt="Gerard Doncel">      
+            <img loading="lazy" class="w-72 rounded-full" src={AvatarImage.src} alt="Gerard Doncel">      
         </div>
     </div>
 </section>
