add check all projects button

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -15,6 +15,7 @@ import ScriptsImage from '@img/unix-system-scripts.webp'
 import ViteIcon from '@icons/ViteIcon.astro';
 import ReactIcon from '@icons/ReactIcon.astro';
 import PreviewIcon from '@icons/PreviewIcon.astro';
+import ExternalIcon from '@icons/ExternalIcon.astro';
 import SourceIcon from '@icons/SourceIcon.astro';
 import BashIcon from '@icons/BashIcon.astro';
 import LinuxIcon from '@icons/LinuxIcon.astro';
@@ -59,5 +60,10 @@ import LinuxIcon from '@icons/LinuxIcon.astro';
                 </Button>
             </div>
         </ProjectCard>
+    </div>
+    <div class="flex justify-center items-center">
+        <Button href='https://github.com/umigam3?tab=repositories' label="Check all my projects on GitHub">
+            <ExternalIcon class="w-4 h-4"></ExternalIcon>
+        </Button>
     </div>
 </section>
