contact form added

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,4 @@
----
-import Contact from "@components/Contact.astro"
----
-
-<div class="mx-auto flex flex-col max-w-6xl px-6 h-full overflow-hidden">
-    <Contact />
+<div class="mx-auto flex flex-col max-w-6xl px-6 overflow-hidden">
     <footer class="flex py-5 justify-between text-sm text-slate-400">
         <span>© 2024 Gerard Doncel Gutiérrez</span>
         <div>
