--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,14 +1,19 @@
-<section id="contact" class="mb-10 section relative">
+<section id="contact" class="mb-10 section relative max-w-4xl mx-auto w-full">
     <h2 class="text-gray-200 font-medium text-2xl text-left md:text-center mb-8 tracking-[.5rem] uppercase">Contact</h2>
 
-    <div>
-        <h2 class="opacity-70 text-xl uppercase font-bold tracking-[.5rem] mb-6">Email</h2>
-        <h3 class="hover:text-primary font-semibold text-2xl md:text-3xl mb-6"><a href="mailto:gerarddoncel41@gmail.com">gerarddoncel41@gmail.com</a></h3>
-        <hr class="opacity-70 mb-6 border-t-violet-500/50 border-r-[1px]">
-        <h2 class="opacity-70 text-xl uppercase font-bold tracking-[.5rem] mb-6">Phone</h2>
-        <h3 class="hover:text-primary font-semibold text-2xl md:text-3xl mb-6"><a class="mb-6" href="tel:+34636739799">+34 636 73 97 99</a></h3>
-        <hr class="opacity-70 mb-6 border-t-violet-500/50 border-r-[1px]">
-        <h2 class="opacity-70 text-xl uppercase font-bold tracking-[.5rem] mb-6">LinkedIn</h2>
-        <h3 class="hover:text-primary font-semibold text-2xl md:text-3xl mb-12 sm:mb-40"><a class="mb-6" target="_blank" href="https://www.linkedin.com/in/gerard-doncel-gutierrez/">LinkedIn profile page</a></h3>
-    </div>
+    <form id="contactform" class="flex flex-col" action="https://formsubmit.co/gerarddoncel41@gmail.com" method="POST">
+        <label class="opacity-70 text-lg uppercase font-bold tracking-[.25rem] mb-1">Subject</label>
+        <input required class="bg-transparent border-[2px] border-slate-500/20 rounded-lg mb-6 px-2 py-1 focus:shadow-[0_0_10px_2px_rgba(165,135,230,0.7)] focus:outline-none" type="text" id="subject" name="subject">
+        <label class="opacity-70 text-lg uppercase font-bold tracking-[.25rem] mb-1">Email</label>
+        <input required class="bg-transparent border-[2px] border-slate-500/20 rounded-lg mb-6 px-2 py-1 focus:shadow-[0_0_10px_2px_rgba(165,135,230,0.7)] focus:outline-none" type="email" id="email" name="email">
+        <label class="opacity-70 text-lg uppercase font-bold tracking-[.25rem] mb-1">Message</label>
+        <textarea required class="bg-transparent border-[2px] border-slate-500/20 resize-none h-48 rounded-lg mb-6 px-2 py-1 focus:shadow-[0_0_10px_2px_rgba(165,135,230,0.7)] focus:outline-none" name="message" id="message" form="contactform"></textarea>
+        <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_template" value="table">
+        <input type="hidden" name="_next" value="https://gerarddoncel.com/feedback">
+
+        <button type="submit" class="mx-auto w-1/3 bg-purple-600 text-white font-bold py-2 px-4 rounded-lg mt-4 hover:bg-purple-700 transition-colors">
+            Submit
+        </button>
+    </form>
 </section>
