--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,6 +44,17 @@ import '@fontsource-variable/onest';
   		box-sizing: border-box;
 	}
 
+	input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus,
+    textarea:-webkit-autofill,
+    textarea:-webkit-autofill:hover,
+    textarea:-webkit-autofill:focus {
+        -webkit-box-shadow: 0 0 0px 100px rgba(0, 0, 0, 0) inset !important;
+        -webkit-text-fill-color: #ffffff !important;
+    }
+
+
 	html {
 		font-family: 'Onest Variable', sans-serif;
 		scroll-behavior: smooth;
