--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Projects from '@components/Projects.astro';
 import Footer from '@components/Footer.astro';
 import AboutMe from '@components/AboutMe.astro';
 import Carousel from "@components/UI/Carousel.astro"
+import Contact from '@components/Contact.astro';
 ---
 
 <Layout>
@@ -17,6 +18,7 @@ import Carousel from "@components/UI/Carousel.astro"
 		<Experience />
 		<Projects />
 		<AboutMe />
+		<Contact />
 	</main>
 	<Footer />
 </Layout>
