--- a/src/components/Feedback.astro
+++ b/src/components/Feedback.astro
@@ -1,6 +1,5 @@
 ---
 import BackIcon from "@icons/BackIcon.astro"
-import Button from "@UI/Button.astro"
 ---
 
 <div class="flex justify-center items-center h-full">
@@ -11,9 +10,10 @@ import Button from "@UI/Button.astro"
             <span class="lg:opacity-0 lg:animate-slidein200 text-secondary font-extrabold inline lg:block">as soon as possible!</span>
         </h1>
         <div class="flex">
-            <Button href="/" label="Go back">
+            <div class="hover:bg-slate-500/20 text-gray-200 flex gap-x-2 items-center cursor-pointer font-medium text-sm rounded-xl px-4 py-2.5 me-2 mb-2 border-[1px] border-slate-500/20 duration-100 ease-in-out transform">
                 <BackIcon class="w-5 h-5" color="#FFF"/>
-            </Button>    
+                <a href="/">Go back</a>
+            </div>
         </div>
     </div>
 </div>
