--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -12,8 +12,17 @@
         <input type="hidden" name="_template" value="table">
         <input type="hidden" name="_next" value="https://gerarddoncel.com/feedback">
 
-        <button type="submit" class="mx-auto w-1/3 bg-purple-600 text-white font-bold py-2 px-4 rounded-lg mt-4 hover:bg-purple-700 transition-colors">
+        <button id="submit-button" type="submit" class="mx-auto w-1/3 bg-purple-600 text-white font-bold py-2 px-4 rounded-lg mt-4 hover:bg-purple-700 transition-colors">
             Submit
         </button>
     </form>
 </section>
+
+<script src="@scripts/formInteraction.ts"></script>
+
+<style>
+    .loading {
+        cursor: not-allowed;
+        opacity: 0.8;
+    }
+</style>
