form submit fix

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@ import Button from "@UI/Button.astro"
 import HeroImage from "@img/hero.webp"
 
 // Files
-import SpanishCV from "@file/cv-resume-es.pdf"
+import SpanishCV from "@files/cv-resume-es.pdf"
 ---
 
 <section id="hero" class="md:pt-12 pt-4 max-w-6xl mx-auto w-full">
