--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -8,9 +8,10 @@
         <input required class="bg-transparent border-[2px] border-slate-500/20 rounded-lg mb-6 px-2 py-1 focus:shadow-[0_0_10px_2px_rgba(165,135,230,0.7)] focus:outline-none" type="email" id="email" name="email">
         <label class="opacity-70 text-lg uppercase font-bold tracking-[.25rem] mb-1">Message</label>
         <textarea required class="bg-transparent border-[2px] border-slate-500/20 resize-none h-48 rounded-lg mb-6 px-2 py-1 focus:shadow-[0_0_10px_2px_rgba(165,135,230,0.7)] focus:outline-none" name="message" id="message" form="contactform"></textarea>
-        <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_template" value="table">
-        <input type="hidden" name="_next" value="https://gerarddoncel.com/feedback">
+
+        <input class="config" type="hidden" name="_next" value="https://gerarddoncel.com/feedback">
+        <input class="config" type="hidden" name="_captcha" value="false">
+        <input class="config" type="hidden" name="_template" value="table">
 
         <button id="submit-button" type="submit" class="mx-auto w-1/3 bg-purple-600 text-white font-bold py-2 px-4 rounded-lg mt-4 hover:bg-purple-700 transition-colors">
             Submit
