--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,6 +28,8 @@ import '@fontsource-variable/onest';
 		<meta name="twitter:title" content="Gerard Doncel">
 		<meta name="twitter:description" content="A Computer Engineer with more than 2 years in web development and solid skills in PHP">
 		<meta name="twitter:image" content="/meta.png">
+
+		<link rel="stylesheet" href="src/styles/loading.min.css">
 	</head>
 	<body class="my-0 mx-auto text-white">
 		<!-- Gradient Background -->
