--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ import '@fontsource-variable/onest';
 		<meta name="twitter:description" content="A Computer Engineer with more than 2 years in web development and solid skills in PHP">
 		<meta name="twitter:image" content="/meta.png">
 
-		<link rel="stylesheet" href="src/styles/loading.min.css">
+		<link rel="stylesheet" type="text/css" href="/styles/loading.min.css"/>
 	</head>
 	<body class="my-0 mx-auto text-white">
 		<!-- Gradient Background -->
