--- a/src/components/Feedback.astro
+++ b/src/components/Feedback.astro
@@ -2,9 +2,9 @@
 import BackIcon from "@icons/BackIcon.astro"
 ---
 
-<div class="flex justify-center items-center h-full">
+<div class="flex justify-center items-center h-full p-6">
     <div class="flex flex-col">
-        <h1 class="animate-slidein lg:animate-none md:leading-tight md:text-6xl text-4xl font-extrabold bg-gradient-to-r text-c mb-4 text-primary">
+        <h1 class="animate-slidein lg:animate-none md:leading-tight text-6xl font-extrabold bg-gradient-to-r text-c mb-6 md:mb-4 text-primary">
             <span class="lg:opacity-0 lg:animate-slidein inline lg:block">Thank you for your message!</span>
             <span class="lg:opacity-0 lg:animate-slidein100 inline lg:block">I will respond</span>
             <span class="lg:opacity-0 lg:animate-slidein200 text-secondary font-extrabold inline lg:block">as soon as possible!</span>
