--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -13,7 +13,7 @@
         <input class="config" type="hidden" name="_captcha" value="false">
         <input class="config" type="hidden" name="_template" value="table">
 
-        <button id="submit-button" type="submit" class=" mx-auto w-1/3 bg-purple-600 text-white font-semibold py-2 px-4 rounded-lg mt-4 hover:bg-purple-700 transition-colors">
+        <button id="submit-button" type="submit" class="mx-auto w-full md:w-1/2 lg:w-1/3 bg-purple-600 text-white font-semibold py-2 px-4 rounded-lg mt-4 hover:bg-purple-700 transition-colors">
             <div class="flex justify-center items-center gap-3 ld-ext-right">
                 <span id="button-text">Submit</span>
                 <div id="loading-icon" class="hidden ld ld-ring ld-spin"></div>
