livewire icon added

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -14,6 +14,7 @@ import WordPressIcon from '@icons/WordPressIcon.astro';
 import SqlIcon from '@icons/SQLIcon.astro';
 import GitIcon from '@icons/GitIcon.astro';
 import LaravelIcon from '@icons/LaravelIcon.astro';
+import LivewireIcon from '@icons/LivewireIcon.astro';
 ---
 
 
@@ -30,6 +31,9 @@ import LaravelIcon from '@icons/LaravelIcon.astro';
             <div class="flex flex-wrap justify-start md:justify-end">
                 <SkillPill color='bg-red-500/30' skill="Laravel">
                     <LaravelIcon class="w-4 h-4"/>
+                </SkillPill>
+                <SkillPill color='bg-pink-500/30' skill="Livewire" >
+                    <LivewireIcon class="w-4 h-4"/>
                 </SkillPill>
                 <SkillPill color='bg-indigo-500/30' skill="PHP">
                     <PhpIcon class="w-4 h-4"/>
