added alpinejs icon

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -15,6 +15,7 @@ import SqlIcon from '@icons/SQLIcon.astro';
 import GitIcon from '@icons/GitIcon.astro';
 import LaravelIcon from '@icons/LaravelIcon.astro';
 import LivewireIcon from '@icons/LivewireIcon.astro';
+import AlpineIcon from '@icons/AlpineIcon.astro';
 ---
 
 
@@ -32,11 +33,14 @@ import LivewireIcon from '@icons/LivewireIcon.astro';
                 <SkillPill color='bg-red-500/30' skill="Laravel">
                     <LaravelIcon class="w-4 h-4"/>
                 </SkillPill>
+                <SkillPill color='bg-indigo-500/30' skill="PHP">
+                    <PhpIcon class="w-4 h-4"/>
+                </SkillPill>
                 <SkillPill color='bg-pink-500/30' skill="Livewire" >
                     <LivewireIcon class="w-4 h-4"/>
                 </SkillPill>
-                <SkillPill color='bg-indigo-500/30' skill="PHP">
-                    <PhpIcon class="w-4 h-4"/>
+                <SkillPill color='bg-cyan-500/30' skill="AlpineJS" >
+                    <AlpineIcon class="w-4 h-4"/>
                 </SkillPill>
                 <SkillPill color='bg-yellow-500/30' skill="JavaScript" >
                     <JavaScriptIcon class="w-4 h-4"/>
