--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -16,6 +16,7 @@ import GitIcon from '@icons/GitIcon.astro';
 import LaravelIcon from '@icons/LaravelIcon.astro';
 import LivewireIcon from '@icons/LivewireIcon.astro';
 import AlpineIcon from '@icons/AlpineIcon.astro';
+import TailwindIcon from '@icons/TailwindIcon.astro';
 ---
 
 
@@ -48,8 +49,8 @@ import AlpineIcon from '@icons/AlpineIcon.astro';
                 <SkillPill color='bg-orange-500/30' skill="HTML" >
                     <HtmlIcon class="w-3 h-4"/>
                 </SkillPill>
-                <SkillPill color='bg-sky-500/30' skill="CSS">
-                    <CssIcon class="w-3 h-4"></Css>
+                <SkillPill color='bg-sky-500/30' skill="Tailwind">
+                    <TailwindIcon class="w-3 h-4"></Css>
                 </SkillPill>
                 <SkillPill color='bg-slate-500/30' skill="MySQL" >
                     <SqlIcon class="w-4 h-4"/>
