added bootstrap icon

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -17,6 +17,7 @@ import LaravelIcon from '@icons/LaravelIcon.astro';
 import LivewireIcon from '@icons/LivewireIcon.astro';
 import AlpineIcon from '@icons/AlpineIcon.astro';
 import TailwindIcon from '@icons/TailwindIcon.astro';
+import BootstrapIcon from '@icons/BootstrapIcon.astro';
 ---
 
 
@@ -76,8 +77,8 @@ import TailwindIcon from '@icons/TailwindIcon.astro';
                 <SkillPill color='bg-orange-500/30' skill="HTML" >
                     <HtmlIcon class="w-3 h-4"/>
                 </SkillPill>
-                <SkillPill color='bg-sky-500/30' skill="CSS">
-                    <CssIcon class="w-3 h-4"></Css>
+                <SkillPill color='bg-indigo-500/30' skill="Bootstrap">
+                    <BootstrapIcon class="w-3 h-4"/>
                 </SkillPill>
                 <SkillPill color='bg-slate-500/30' skill="MySQL" >
                     <SqlIcon class="w-4 h-4"/>
