--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -4,22 +4,6 @@ import ExperienceCard from '@components/ExperienceCard.astro';
 import SkillPill from '@UI/SkillPill.astro';
 
 // Icons
-<<<<<<< Updated upstream
-import PhpIcon from '@icons/PHPIcon.astro';
-import AngularIcon from '@icons/AngularIcon.astro';
-import TypeScriptIcon from '@icons/TypeScriptIcon.astro';
-import JavaScriptIcon from '@icons/JavaScriptIcon.astro';
-import HtmlIcon from '@icons/HTMLIcon.astro';
-import CssIcon from '@icons/CSSIcon.astro';
-import WordPressIcon from '@icons/WordPressIcon.astro';
-import SqlIcon from '@icons/SQLIcon.astro';
-import GitIcon from '@icons/GitIcon.astro';
-import LaravelIcon from '@icons/LaravelIcon.astro';
-import LivewireIcon from '@icons/LivewireIcon.astro';
-import AlpineIcon from '@icons/AlpineIcon.astro';
-import TailwindIcon from '@icons/TailwindIcon.astro';
-import BootstrapIcon from '@icons/BootstrapIcon.astro';
-=======
 import PhpIcon from '@icons/tech/PHPIcon.astro';
 import AngularIcon from '@icons/tech/AngularIcon.astro';
 import TypeScriptIcon from '@icons/tech/TypeScriptIcon.astro';
@@ -30,7 +14,10 @@ import WordPressIcon from '@icons/tech/WordPressIcon.astro';
 import SqlIcon from '@icons/tech/SQLIcon.astro';
 import GitIcon from '@icons/tech/GitIcon.astro';
 import LaravelIcon from '@icons/tech/LaravelIcon.astro';
->>>>>>> Stashed changes
+import LivewireIcon from '@icons/tech/LivewireIcon.astro';
+import AlpineIcon from '@icons/tech/AlpineIcon.astro';
+import TailwindIcon from '@icons/tech/TailwindIcon.astro';
+import BootstrapIcon from '@icons/tech/BootstrapIcon.astro';
 ---
 
 
