--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,8 +1,8 @@
 ---
 // Icons
-import LinkedInIcon from "@icons/LinkedInIcon.astro"
-import GitHubIcon from "@icons/GitHubIcon.astro"
-import ResumeIcon from "@icons/ResumeIcon.astro"
+import LinkedInIcon from "@icons/miscellaneous/LinkedInIcon.astro"
+import ResumeIcon from "@icons/miscellaneous/ResumeIcon.astro"
+import GitHubIcon from "@icons/tech/GitHubIcon.astro"
 
 // UI
 import Button from "@UI/Button.astro"
