--- a/src/components/Feedback.astro
+++ b/src/components/Feedback.astro
@@ -1,5 +1,5 @@
 ---
-import BackIcon from "@icons/BackIcon.astro"
+import BackIcon from "@icons/miscellaneous/BackIcon.astro"
 ---
 
 <div class="flex justify-center items-center h-full p-6">
