--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -4,21 +4,19 @@ import ProjectCard from '@components/ProjectCard.astro';
 import SkillPill from '@UI/SkillPill.astro';
 import Button from '@UI/Button.astro';
 
-// Icons
-import JavaScriptIcon from '@icons/JavaScriptIcon.astro';
-
 // Images
 import PokedexImage from '@img/pokedex-project.webp'
 import ScriptsImage from '@img/unix-system-scripts.webp'
 
 // Icons
-import ViteIcon from '@icons/ViteIcon.astro';
-import ReactIcon from '@icons/ReactIcon.astro';
-import PreviewIcon from '@icons/PreviewIcon.astro';
-import ExternalIcon from '@icons/ExternalIcon.astro';
-import SourceIcon from '@icons/SourceIcon.astro';
-import BashIcon from '@icons/BashIcon.astro';
-import LinuxIcon from '@icons/LinuxIcon.astro';
+import JavaScriptIcon from '@icons/tech/JavaScriptIcon.astro';
+import ViteIcon from '@icons/tech/ViteIcon.astro';
+import ReactIcon from '@icons/tech/ReactIcon.astro';
+import BashIcon from '@icons/tech/BashIcon.astro';
+import LinuxIcon from '@icons/tech/LinuxIcon.astro';
+import PreviewIcon from '@icons/miscellaneous/PreviewIcon.astro';
+import ExternalIcon from '@icons/miscellaneous/ExternalIcon.astro';
+import SourceIcon from '@icons/miscellaneous/SourceIcon.astro';
 ---
 
 <section id="projects" class="mb-10 section max-w-6xl mx-auto w-full">
