--- a/src/components/UI/Carousel.astro
+++ b/src/components/UI/Carousel.astro
@@ -1,14 +1,14 @@
 ---
-import PhpIconCarousel from '../../icons/PHPIconCarousel.astro';
-import JavaScriptIcon from '../../icons/JavaScriptIcon.astro';
-import HtmlIcon from '../../icons/HTMLIcon.astro';
-import CssIcon from '../../icons/CSSIcon.astro';
-import SqlIcon from '../../icons/SQLIcon.astro';
-import GitIcon from '../../icons/GitIcon.astro';
-import ReactIcon from '../../icons/ReactIcon.astro';
-import TailwindIcon from '../../icons/TailwindIcon.astro';
-import VisualStudio from '../../icons/VisualStudio.astro';
-import LaravelIcon from '../../icons/LaravelIcon.astro';
+import PhpIconCarousel from '@icons/tech/PHPIconCarousel.astro';
+import JavaScriptIcon from '@icons/tech/JavaScriptIcon.astro';
+import HtmlIcon from '@icons/tech/HTMLIcon.astro';
+import CssIcon from '@icons/tech/CSSIcon.astro';
+import SqlIcon from '@icons/tech/SQLIcon.astro';
+import GitIcon from '@icons/tech/GitIcon.astro';
+import ReactIcon from '@icons/tech/ReactIcon.astro';
+import TailwindIcon from '@icons/tech/TailwindIcon.astro';
+import VisualStudio from '@icons/tech/VisualStudio.astro';
+import LaravelIcon from '@icons/tech/LaravelIcon.astro';
 ---
 
 <div class="w-full inline-flex flex-nowrap overflow-hidden mb-12 [mask-image:_linear-gradient(to_right,transparent_0,_black_128px,_black_calc(100%-200px),transparent_100%)]">
